fixed navbar text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,6 +144,8 @@
    font-family: ofelia-text, sans-serif;
    font-weight: 400;
    font-style: normal;
+   line-height: 1.5rem;
+   display: flex;
  }
 
  .navLink :hover {
